# radio-cli

./: .gitignore  Cargo.toml  HOMEBREW.md  LICENSE  README.md  RELEASING.md  build.rs  homebrew-setup.sh  homebrew_pr_template.md  include_db_in_release.sh  justfile  release.sh  setup_homebrew_tap.sh  tap-readme.md  update-formula.sh  update_homebrew.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml  test.yml  update-formula.yml
Formula/: radio-cli.rb
src/: assets.rs  lib.rs  main.rs
src/app/: mod.rs
src/audio/: mod.rs  sound_effects.rs
src/db/: mod.rs
src/rcast/: mod.rs
src/ui/: mod.rs  popup.rs  rcast_stations.rs  vis_menu.rs
src/visualizations/: bar_spectrum.rs  mod.rs  starfield.rs  waveforms.rs
