[package]
name = "radio_cli"
version = "0.9.0"
edition = "2021"
authors = ["schlunsen"]
description = "Terminal-based internet radio player with visualizations"
homepage = "https://github.com/schlunsen/radio-cli"
repository = "https://github.com/schlunsen/radio-cli"
readme = "README.md"
license = "MIT"
keywords = ["terminal", "radio", "audio", "tui", "visualization"]
categories = ["command-line-utilities", "multimedia"]

[features]
default = []
skip_mpv = []

[dependencies]
rusqlite = "0.26"
crossterm = "0.26"
ratatui = "0.24"
rand = "0.8"
dirs-next = "2.0"