[package]
name = "radio_cli"
version = "1.3.5"
edition = "2021"
authors = ["schlunsen"]
description = "Terminal-based internet radio player with visualizations"
homepage = "https://github.com/schlunsen/radio-cli"
repository = "https://github.com/schlunsen/radio-cli"
readme = "README.md"
license = "MIT"
keywords = ["terminal", "radio", "audio", "tui", "visualization"]
categories = ["command-line-utilities", "multimedia"]

[features]
default = []
skip_mpv = []

[dependencies]
rusqlite = "0.26"
crossterm = "0.26"
ratatui = "0.24"
rand = "0.8"
dirs-next = "2.0"
lazy_static = "1.4"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.45.0", features = ["full"] }
scraper = "0.18.1"
futures = "0.3"
chrono = "0.4"